# ChangeLog for dev-python/shelldoctest
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2012; James Rowe <jnrowe@gmail.com> shelldoctest-0.2-r1.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  05 Apr 2011; James Rowe <jnrowe@gmail.com> shelldoctest-0.2-r1.ebuild:
  shellunittest functionality paramiko, but most functionality is possible
  without it.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  23 Sep 2010; James Rowe <jnrowe@gmail.com> -shelldoctest-0.2.ebuild,
  shelldoctest-0.2-r1.ebuild:
  Keyworded x86.

  23 Sep 2010; James Rowe <jnrowe@gmail.com> shelldoctest-0.2-r1.ebuild:
  Keyworded amd64.

*shelldoctest-0.2-r1 (24 Aug 2010)

  24 Aug 2010; James Rowe <jnrowe@gmail.com> +shelldoctest-0.2-r1.ebuild:
  Bumped for missing commandlineapp dependency.  This dependency is only
  required to run the command line tool, the library functions perfectly without
  it.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> shelldoctest-0.2.ebuild:
  Added PYTHON_DEPEND setting.

  12 Mar 2010; James Rowe <jnrowe@gmail.com> shelldoctest-0.2.ebuild:
  Keyworded x86.

  12 Mar 2010; James Rowe <jnrowe@gmail.com> shelldoctest-0.2.ebuild:
  Keyworded amd64.

*shelldoctest-0.2 (10 Feb 2010)

  10 Feb 2010; James Rowe <jnrowe@gmail.com> +shelldoctest-0.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
