@@ -3,9 +3,7 @@
 # $Header: $
 
 EAPI=4
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="2"
-RESTRICT_PYTHON_ABIS="3.*"
+PYTHON_COMPAT="python2_5 python2_6 python2_7"
 
 inherit jnrowe-pypi
 
@@ -19,3 +17,15 @@ IUSE="minimal"
 DEPEND=""
 RDEPEND="dev-python/commandlineapp
 	!minimal? ( dev-python/paramiko )"
+
+DOCS=(README)
+
+python_install_all() {
+	python-distutils-ng_redoscript "/usr/bin/${PN}"
+}
+
+src_install() {
+	default
+
+	python-distutils-ng_src_install
+}
